CS_SBOX_20150209_01/Metadata/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AR_Rep__c</fullName>
        <formula>IF(NAAT__c=TRUE, &quot;Sue Mierop&quot;, IF(BEGINS(Name, &quot;G&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;H&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;I&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;J&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;K&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;L&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;M&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;N&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;O&quot;), &quot;Diana Rene&quot;, IF(BEGINS(Name, &quot;P&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;Q&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;R&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;S&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;T&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;U&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;V&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;W&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;X&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;Y&quot;), &quot;Tony Mace&quot;, IF(BEGINS(Name, &quot;Z&quot;), &quot;Tony Mace&quot;, &quot;Richard Micus&quot;)))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Billing_Last_Validated__c</fullName>
        <inlineHelpText>Date and Time Billing Address was last validated.  Cannot Be Edited.</inlineHelpText>
        <label>Last Validated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Shipping_Last_Validated__c</fullName>
        <inlineHelpText>Date and Time Shipping Address was last validated.  Cannot be Edited.</inlineHelpText>
        <label>Last Validated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Health_Color__c</fullName>
        <formula>IF(TEXT(Account_Health__c)=&quot;Red&quot;,IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),
IF(TEXT(Account_Health__c)=&quot;Yellow&quot;,IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),IF(TEXT(Account_Health__c)=&quot;Green&quot;,IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The color system is based on the Account&apos;s level of satisfaction and likeliness to renew (set by Sales/CS): 
Red = at risk, high maintenance 
Yellow = have some issues, but manageable and can be worked out
Green = love Cision (even if a needier client)</inlineHelpText>
        <label>Account Health Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Health__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <inlineHelpText>The color system  is based on the Account&apos;s level of satisfaction and likeliness to renew (set by Sales/CS):
Red = at risk, high maintenance
Yellow = have some issues, but manageable and can be worked out
Green = love Cision (even if a needier client)</inlineHelpText>
        <label>Account Health</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#33CC00</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Level_Discount__c</fullName>
        <inlineHelpText>This field is the percentage that will be applied to all Broadcast Items purchased by this Account.</inlineHelpText>
        <label>Account Level Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Ownership_History__c</fullName>
        <description>Created by LM on 4/4/14 for Phase2</description>
        <label>Account Ownership History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Profile_Notes__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Account Profile Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <description>Added by LM on 2/6/2013; New for SFDC rollout</description>
        <inlineHelpText>The account&apos;s renewal tier (based on the annual renewal amount).</inlineHelpText>
        <label>PH2-Account Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Value__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>12 Month  Rolling Total of All Invoices</inlineHelpText>
        <label>PH2-Account Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advanced_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Advanced Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added by LM on 2/6/2013; New for SFDC rollout</description>
        <inlineHelpText>The Agency field creates a relationship with this Account (a client) and the Agency that represents it. Sometimes we will do business with the Agency; sometimes we do business directly with the client.</inlineHelpText>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Category__c</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <infoMessage>Choose an Agency</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Clients</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alias_Account_Name_1__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Alias Account Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Account_Name_2__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Alias Account Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Account_Name_3__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Alias Account Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/11/2013 for Phase 2 rollout</description>
        <label>Analysis Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analysis_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Analysis Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analyze_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Analyze Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annua_lRevenue_Groupings__c</fullName>
        <label>Annua lRevenue Groupings</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10M-$25M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25M-$50M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50-150M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$150M-$500M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500M-$1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1B+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assets_In_Native_Country_Currency__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Assets (In Native Country Currency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broadcast_Account_Value__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>12 Month Rolling Total of Broadcast Invoices from NetSuite</inlineHelpText>
        <label>PH2-Broadcast Account Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broadcast_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/11/2013 for Phase 2 rollout</description>
        <label>Broadcast Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broadcast_Last_Touched_Date__c</fullName>
        <description>Created by LM on 2/17/14 for Phase2</description>
        <label>Broadcast Last Touched Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broadcast_Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Broadcast Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broadcast_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Broadcast Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Burrelles_Print_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Burrelles: Print Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Burrelles_Track_Clients_At_Agencies__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <inlineHelpText>Used to track clients that are at agencies whose monitoring has transferred to Burrelles.</inlineHelpText>
        <label>PH2-Burrelles: Track Clients At Agencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Entity_Type__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Business Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Account_ID__c</fullName>
        <description>Created by LM on 12/2/2013 for Phase2</description>
        <externalId>true</externalId>
        <label>CRM Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Tier__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>Client Support team assigned to this account.</inlineHelpText>
        <label>CS Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International - Tier2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Consultants</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Canada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Canada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Added by LM on 2/6/2013; From NetSuite</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CisionPoint_ID__c</fullName>
        <description>Added by LM on 2/28/2013; From NetSuite</description>
        <label>CisionPoint ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CisionWire_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>PH2-CisionWire Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Services_Info_Exp_Date__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Client Services Info Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Services_Info__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Client Services Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Shipping_Account__c</fullName>
        <description>Added by LM on 2/7/2013; From NetSuite</description>
        <inlineHelpText>Client supplied shipping number in order to send products via their shipping account.</inlineHelpText>
        <label>Client Shipping Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Info_Exp_Date__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Collection Info Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collections_Info_Exp_Date__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Collections Info Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collections_Info__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Collections Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Info__c</fullName>
        <description>Added by MD on 09/05/2013 as part of the Phase 2 development</description>
        <label>Competitor Info</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connect_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/11/2013 for Phase 2 rollout</description>
        <label>Connect Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Content Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Billing_Address_to_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to copy your Billing Address to the Shipping Address.</inlineHelpText>
        <label>Copy Billing Address to Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether a credit reference has been obtained</description>
        <label>Credit Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Values_Date__c</fullName>
        <description>Created by LM on 3/6/2014 for Phase2</description>
        <label>Credit Risk Values Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Risk__c</fullName>
        <label>Credit Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMA_ID__c</fullName>
        <label>DMA ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designated_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>Denotes an account identified as a top prospect by New Business Sales.</inlineHelpText>
        <label>PH2-Designated Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directories__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Directories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/7/2014 for Phase2</description>
        <label>Do Not Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Term_Reason__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Early Term Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 314/2014 for Phase2</description>
        <label>Early Term?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronic_Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Electronic Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employees_1_Year_Growth_Percent__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Employees 1 Year Growth (Percent)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 11/18/2013 for Phase 2 rollout</description>
        <label>Enterprise Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extensions_Info_Exp_Date__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Extensions Info Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extensions_Info__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Extensions Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fortune_1000_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>PH2-Fortune 1000 Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fortune_1000_Ranking__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Fortune 1000 Ranking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Cust_ID__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>GP Cust ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Integration_Number__c</fullName>
        <description>Used for GP Integration because SFDC &quot;GUID&quot; is too long for Lon&apos;s code</description>
        <displayFormat>SF-{000000}</displayFormat>
        <label>GP Integration Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Global_Analysts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Global Analysts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gorkana_Account_Type__c</fullName>
        <label>Gorkana Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gorkana_SFDC_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Gorkana SFDC Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Group_Name__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Industry Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Sector_Name__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Industry Sector Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_Database__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS International Database</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Count__c</fullName>
        <label>Invoice Count</label>
        <summaryFilterItems>
            <field>Opportunity.Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Invoiced</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Early_Term_Date__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Last Early Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Purchase_Date__c</fullName>
        <label>Last Purchase Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Pending Invoicing, Invoiced, Payment Error, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LexisNexis_Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>Indicator of  an account exclusive to LexisNexis. Cision may not propose eNews to this account without executive approval.</inlineHelpText>
        <label>LexisNexis Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lexis_WSK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/6/2014 for Phase2 rollout</description>
        <label>Lexis WSK?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Added by LM on 3/11/2013; New for SFDC rollout</description>
        <inlineHelpText>For Parent-Child Accounts where Location is the reason for the Parent-Child relationship.</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Signed_On__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>MSA Signed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Managed_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Managed Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/11/2013 for Phase 2 rollout</description>
        <label>Monitoring Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NAAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_1_Description__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>NAICS Code 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_1__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>NAICS Code 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_2_Description__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>NAICS Code 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_2__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>NAICS Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_3_Description__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>NAICS Code 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_3__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>NAICS Code 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Named Account Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NamedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 11/18/2013 for Phase 2 rollout</description>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Income_1_Year_Growth_Percent__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Net Income 1 Year Growth (Percent)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Income_In_Native_Country_Currency__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Net Income (In Native Country Currency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Biz_Info_Exp_Date__c</fullName>
        <description>Created by LM on 9/11/2013 for Phase 2 rollout</description>
        <label>New Biz Info Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Biz_Info__c</fullName>
        <description>Created by LM on 9/11/2013 for Phase 2 rollout</description>
        <label>New Biz Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Biz_Last_Touched_Date__c</fullName>
        <description>Added by LM on 1/17/14 for Phase2</description>
        <label>New Biz Last Touched Date</label>
        <type>Date</type>
    </fields>
</CustomObject>